AprobRes nuevo caso de historia academica.